--- a/FlightSearchSimulator/Views/Home/Search.cshtml
+++ b/FlightSearchSimulator/Views/Home/Search.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Search Result</h2>
+<h2>@FlightSearchResources.FSContent.SearchResultLabel</h2>
 
 
 <table class="table">
